# legal-council

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/api/: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  conductor.json  docker-compose.yml  go.mod  go.sum  oapi-codegen.yaml  package-lock.json  package.json  sqlc.yaml
apps/api/api/: README.md  openapi-bundled.yaml  openapi.yaml
apps/api/api/paths/: council.yaml  health.yaml
apps/api/api/schemas/: common.yaml  council.yaml
apps/api/cmd/api/: main.go
apps/api/cmd/gen-i18n-keys/: main.go
apps/api/db/: .editorconfig  .env.example  .gitignore  DEPLOY_CHECKLIST_000094_ocds_v2_fresh_start.md  Makefile  README.md
apps/api/db/migrations/: 000001_extensions.down.sql  000001_extensions.up.sql  000002_bo_crawler_v1.down.sql  000002_bo_crawler_v1.up.sql  000003_bo_v1.down.sql  000003_bo_v1.up.sql  000004_council_v1.down.sql  000004_council_v1.up.sql  000005_crawler.down.sql  000005_crawler.up.sql  000006_ocds.down.sql  000006_ocds.up.sql  000007_schema_fixes.down.sql  000007_schema_fixes.up.sql  000008_zombie_cleanup_index.down.sql  000008_zombie_cleanup_index.up.sql  000009_add_retry_count.down.sql  000009_add_retry_count.up.sql  000010_spse_jadwal_pdf.down.sql  000010_spse_jadwal_pdf.up.sql  000011_add_nation_lower_index.down.sql  000011_add_nation_lower_index.up.sql  000012_add_lkpp_blacklist.down.sql  000012_add_lkpp_blacklist.up.sql  000013_add_tender_query_indexes.down.sql  000013_add_tender_query_indexes.up.sql  (+237 more)
apps/api/scripts/: agent-worktree.sh  bump-tools.sh  bump-uv.sh  split_openapi.py
apps/llm/: .dockerignore  .env.example  Dockerfile  main.py  package.json  pyproject.toml  settings.py
apps/llm/src/: __init__.py  embedding.py
apps/llm/src/council/: __init__.py  database.py  dependencies.py  schemas.py
apps/llm/src/council/agents/: __init__.py  base.py  classifier.py  guardrails.py  historian.py  humanist.py  identity.py  orchestrator.py  position_extractor.py  prompts.py  router.py  state_machine.py  strict.py
apps/llm/src/council/db/: __init__.py
apps/llm/src/council/db/sqlc/: __init__.py
apps/llm/src/council/db/sqlc/council/: __init__.py  council.py  models.py
apps/llm/src/council/db/sqlc/extraction/: __init__.py  llm_extractions.py  models.py
apps/llm/src/council/models/: __init__.py  generated.py  internal.py
apps/llm/src/council/routers/: __init__.py  capabilities.py  cases.py  deliberation.py  sessions.py
apps/llm/src/council/services/: __init__.py  case_parser.py  embeddings.py  opinion_generator.py  pdf_generator.py  summary_generator.py
apps/llm/tests/: conftest.py  test_agents.py  test_api.py  test_case_parser_guardrails.py  test_cases_router.py  test_classifier.py  test_database.py  test_deliberation_router.py  test_guardrails.py  test_main.py  test_orchestrator.py  test_pdf_generator.py  test_position_extractor.py  test_prompts.py  test_router.py  test_schemas.py  test_services.py  test_sessions_router.py  test_state_machine.py  test_summary_generator.py
apps/web/: .impeccable.md  eslint.config.mjs  package.json  postcss.config.mjs  tsconfig.json  vitest.config.ts
(+80 files in other folders)
